# advocacy_bot

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml
advocacy_bot/: bot.py  config.py  database.py  embeddings.py  matcher.py  models.py  notifier.py  scraper.py
advocacy_bot/cogs/: admin.py  channels.py  meetings.py  setup.py  watch.py
advocacy_bot/tasks/: reminder_task.py  scrape_task.py
scripts/: build.sh  deploy.sh
tests/: test_database.py  test_embeddings.py  test_matcher.py  test_reminder_task.py  test_scraper.py
tests/fixtures/: agenda_6892.html  home.html
